--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -48,7 +48,7 @@
   padding: 10px 15px;
   border-radius: 20px;
   max-width: 75%;
-  border-top-left-radius: 2px;
+  /* border-top-left-radius: 2px; */
   border-bottom-left-radius: 2px;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
