--- a/src/components/Compose/Compose.css
+++ b/src/components/Compose/Compose.css
@@ -5,13 +5,13 @@
   background: white;
   border-top: 1px solid #eeeef1;
   position: fixed;
-  width: calc(100% - 20px);
+  width: 69.7%;
   bottom: 0px;
 }
 
 @supports (backdrop-filter: blur(20px)) {
   .compose {
-    border: none;
+    /* border: none; */
     background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(20px);
   }
