--- a/src/components/Compose/Compose.css
+++ b/src/components/Compose/Compose.css
@@ -16,7 +16,16 @@
     backdrop-filter: blur(20px);
   }
 }
+.sendButton {
+  color: #2979FF;
+  text-decoration: none;
+  background:#fff ;
+  display: inline-block;
+  border: none;
+  font-size: 20px;
+  transition: all 0.1s;
 
+}
 .compose-input {
   flex: 1;
   border: none;
