--- a/src/components/ConversationList/ConversationList.css
+++ b/src/components/ConversationList/ConversationList.css
@@ -1,4 +1,12 @@
 .conversation-list {
   display: flex;
   flex-direction: column;
+ 
+}
+.no-result{
+  font-weight: 500;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  color: gray;
 }
