--- a/src/components/Messenger/Messenger.css
+++ b/src/components/Messenger/Messenger.css
@@ -9,7 +9,14 @@
   grid-column-gap: 1px;
   grid-row-gap: 1px;
 }
+*::-webkit-scrollbar {
+  width: 8px;
+}
 
+*::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background-color: #00000033;
+}
 .container {
   padding: 10px;
 }
