uploadImg and deleteGroupOption

--- a/src/components/ConversationListItem/ConversationListItem.css
+++ b/src/components/ConversationListItem/ConversationListItem.css
@@ -8,6 +8,10 @@
   background: #eeeef1;
   cursor: pointer;
 }
+.option:hover{
+  background-color: cornsilk;
+  
+}
 .conversation-list-item:focus-visible {
   background:chartreuse;
   cursor: pointer;
