--- a/src/components/ConversationSearch/ConversationSearch.css
+++ b/src/components/ConversationSearch/ConversationSearch.css
@@ -1,21 +1,18 @@
 .conversation-search {
-  padding: 10px;
+  padding: 10px 20px;
   display: flex;
-  flex-direction: column;
+  flex-direction: column; 
 }
 
 .conversation-search-input {
-  background: #f4f4f8;
-  padding: 8px 10px;
-  border-radius: 10px;
-  border: none;
+  padding: 8px 33px;  
   font-size: 14px;
+  border: 1px solid #EBEBEB;
+border-radius: 8px;
+opacity: 0.54;
+background:url('../../assets/icons8-search-50.png') no-repeat left;
+background-size: 20px;
+background-position-x: 10px;
+
 }
 
-.conversation-search-input::placeholder {
-  text-align: center;
-}
-
-.conversation-search-input:focus::placeholder {
-  text-align: left;
-}
