--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -1,22 +1,14 @@
 .toolbar {
   display: flex;
   align-items: center;
-
-  background-color: white;
   font-weight: 500;
   border-bottom: 1px solid #eeeef1;
-
+  color: #384364;
   position: sticky;
   top: 0px;
 }
 
-@supports (backdrop-filter: blur(20px)) {
-  .toolbar {
-    border: none;
-    background-color: rgba(255, 255, 255, 0.8);
-    backdrop-filter: blur(20px);
-  }
-}
+
 
 .toolbar-title {
   margin: 0;
