--- a/src/components/ConversationList/ConversationList.css
+++ b/src/components/ConversationList/ConversationList.css
@@ -8,42 +8,8 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  color: #384364;
+  color: gray;
 }
-
-
-.conversationsTitle{
-  text-align: left;
-  color: #384364;
-  font-size:18px;
-  padding:0px 18px;  
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
-.cli::-webkit-scrollbar {
-    display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
-.cli {
-  -ms-overflow-style: none; 
-  scrollbar-width: none;  
-}
-.cli{
-  height: 31vh;
-  overflow-y: scroll; 
-
-}
-
-.title-new-conversations{
-  color:#A66DFF;
-  font-size:20px;
-  text-align: center;
-  padding: 15px;
-  border-bottom: 1px solid #EEEEEE;
-  font: normal;
-}
-
-.title-new-conversations:hover{
-cursor: pointer;
+.color{
+  background-color: brown;
 }
