--- a/src/components/Messenger/Messenger.css
+++ b/src/components/Messenger/Messenger.css
@@ -1,45 +1,47 @@
-.messenger {
-  display: grid;
-  width: 100%;
-  height: 100vh;
-  background: #eeeef1;
+.b {
+  background-color: #E8EAEC;
+  /* background-color: black; */
+ 
+}
+.headerImg{
+height: 20vh;
+background-image: url('../../assets/Mask Group 78.png') ;
+}
+.messageList{
+height: 94vh;
 
-  grid-template-columns: 350px auto;
-  grid-template-rows: 60px auto 60px;
-  grid-column-gap: 1px;
-  grid-row-gap: 1px;
 }
+.ml{
+height: 74vh;
+background-color: #FFFFFF;
+
+}
+.profile{
+height: 34vh;
+
+}
+.cl{
+height: 57vh;
+}
+.profile,.cl{
+background-color:  #FFFFFF;
+border-radius: 10px;
+border:none;
+
+}
+
 *::-webkit-scrollbar {
-  width: 8px;
+width: 8px;
 }
+
 
 *::-webkit-scrollbar-thumb {
-  border-radius: 20px;
-  background-color: #00000033;
-}
-.container {
-  padding: 10px;
+border-radius: 20px;
+background-color: #00000033;
 }
 
 .scrollable {
-  position: relative;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
-}
-
-.sidebar {
-  background: white;
-  grid-row-start: 1;
-  grid-row-end: span 3;
-}
-
-.content {
-  background: white;
-  grid-row-start: 1;
-  grid-row-end: span 3;
-}
-
-.footer {
-  grid-column-start: 2;
-  background: white;
+position: relative;
+overflow-y: scroll;
+-webkit-overflow-scrolling: touch;
 }
