--- a/src/components/MessageList/MessageList.css
+++ b/src/components/MessageList/MessageList.css
@@ -1,6 +1,8 @@
 .message-list-container {
-  padding: 10px;
+  padding-right: 170px !important;
+  padding-left: 170px !important;
   padding-bottom: 70px;
+  height: 40vh;
 }
 .tool{
   color: #007aff;
