--- a/src/components/Messenger/Messenger.css
+++ b/src/components/Messenger/Messenger.css
@@ -6,6 +6,7 @@
 .headerImg{
 height: 20vh;
 background-image: url('../../assets/Mask Group 78.png') ;
+background-repeat: no-repeat;
 }
 .messageList{
 height: 94vh;
